--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
-file-renamer-gui
-├── src
-│   ├── main.py
-│   ├── gui
-│   │   └── main_window.py
-│   ├── core
-│   │   ├── rename_utils.py
-│   │   └── logger.py
-│   └── resources
-│       └── style.qss
-├── requirements.txt
-└── README.md
+# GUI界面依赖
+PyQt5>=5.15.0
+
+# 日志和文件处理
+python-dateutil>=2.8.0
+
+# 开发工具依赖（可选）
+black>=21.0.0  # 代码格式化
+flake8>=3.9.0  # 代码检查
